--- a/public/tournaments.css
+++ b/public/tournaments.css
@@ -16,7 +16,25 @@ nav {
 	background-color: inherit;
 }
 
-th {
+.event-nav .nav-wrapper {
+	padding-left: 20px; 
+	padding-right: 20px;
+}
+
+.event-nav .brand-logo {
+	font-size: 1.6rem;
+}
+
+.event-nav > div > a > i {
+	display: inline-block; 
+	vertical-align: sub;
+}
+
+.event-nav > ul > li > a {
+	cursor: pointer;
+}
+
+tr, th {
 	font-weight: normal;
 }
 
@@ -41,6 +59,7 @@ th {
 	border-style: dashed;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: -3px;
 }
 
 .dragover {
@@ -54,6 +73,7 @@ a.hoverable {
     -ms-transition: color .3s ease-out;
     transition: color .3s ease-out;
 	color: inherit; 
+	cursor: pointer;
 }
 
 a.hoverable:hover {
@@ -370,6 +390,15 @@ textarea.materialize-textarea.invalid-field:focus:not([readonly])+label {
   	display: inline-block;
 }
 
+.profile-avatar {
+	overflow: hidden; 
+	display: inline-block; 
+	vertical-align: middle; 
+	margin-left: 10px; 
+	width: 42px; 
+	height: 42px;
+}
+
 .collection .collection-item.avatar .tournament-badge {
   position: absolute;
   width: 47px;
@@ -382,12 +411,58 @@ textarea.materialize-textarea.invalid-field:focus:not([readonly])+label {
   padding: 5px;
 }
 
+.collection-item.avatar {
+	height: 66px; 
+	width: 100%;
+}
+
+.player-modal-name {
+	line-height: 2.9rem;
+}
+
+.player-modal-avatar {
+	width: 42px; 
+	vertical-align: sub; 
+	height: 42px; 
+	margin-right: 9px;
+}
+
 .tournament-badge {
 	border-radius: 20%;
 	background-color: #e0e0e0;
 }
 
+.main-content-card {
+	position: absolute;
+	width: 100%;
+}
+
+.main-content-card .container {
+	margin-top: -50px;
+}
+
+.bottom0 { margin-bottom: 0px !important; }
 .bottom5 { margin-bottom: 5px !important; }
 .bottom10 { margin-bottom: 10px !important; }
 .bottom15 { margin-bottom: 15px !important; }
 .bottom20 { margin-bottom: 20px !important; }
+.bottom25 { margin-bottom: 25px !important; }
+.bottom30 { margin-bottom: 30px !important; }
+.top0 { margin-top: 0px !important; }
+.top5 { margin-top: 5px !important; }
+.top10 { margin-top: 10px !important; }
+.top15 { margin-top: 15px !important; }
+.top20 { margin-top: 20px !important; }
+.top25 { margin-top: 25px !important; }
+.top30 { margin-top: 30px !important; }
+.top35 { margin-top: 35px !important; }
+.top40 { margin-top: 40px !important; }
+.left5 { padding-left: 5px !important; }
+.left10 { padding-left: 10px !important; }
+.left15 { padding-left: 15px !important; }
+.left20 { padding-left: 20px !important; }
+.right5 { padding-right: 5px !important; }
+.right10 { padding-right: 10px !important; }
+.right15 { padding-right: 15px !important; }
+.right20 { padding-right: 20px !important; }
+.preline { white-space: pre-line; }
