(fix): auto handle http removal

--- a/public/sass/components/_cards.scss
+++ b/public/sass/components/_cards.scss
@@ -152,6 +152,11 @@
 	background: url('../../../images/games/sf2ce.png');
 }
 
+.shoutbox-panel {
+	max-height: 150px;
+	overflow-x: scroll;
+}
+
 .game-card::after {
 	content: "";
 	opacity: 0.05;
